# python-tiktok-web-clone

./: .env.example  .gitignore  Makefile  README.md  celerybeat-schedule  pyproject.toml
app/: celery.py  context_processor.py  log.py  settings.py  urls.py  utils.py
cloudflare/: backblaze-worker.js
database/seeders/: __init__.py  age_verification_seeder.py  balance_seeder.py  engagement_seeder.py  follow_seeder.py  group_seeder.py  inbox_seeder.py  media_data.py  media_seeder.py  packages_seeder.py  payment_seeder.py  user_seeder.py
docker/: docker-compose.override.yml.dev  docker-compose.override.yml.prod  docker-compose.yml
docker/nginx/: nginx_config.conf
docker/web/: Dockerfile  entrypoint.sh  wait_for_db.py
docs/: CCBill.md
scripts/: deploy.sh  deploy_production.sh  deploy_staging.sh
src/activity/: apps.py  urls.py
src/age_verification/: admin.py  apps.py  middlewares.py  models.py  urls.py  views.py
src/authentication/: apps.py  signals.py  urls.py  views.py
src/consent/: apps.py  enums.py  urls.py  views.py
src/core/: admin.py  apps.py  helpers.py  urls.py  utils.py  views.py
src/discover/: .DEPRECATED  apps.py  urls.py  views.py
src/engagement/: apps.py  models.py  urls.py  views.py
src/feed/: apps.py  urls.py  views.py
src/follow/: apps.py  models.py  urls.py  views.py
src/follower/: apps.py  models.py  urls.py  views.py
src/inbox/: apps.py  enums.py  models.py  query_managers.py  tasks.py  urls.py  views.py
src/media/: admin.py  apps.py  enums.py  models.py  query_managers.py  tasks.py  urls.py  utils.py  views.py
src/notification/: models.py  urls.py  views.py
src/payment/: admin.py  enums.py  (+4 more)
static/: manifest.json
(+308 files in other folders)
