[project]
name = "app"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "django-environ (>=0.12.0,<0.13.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django (>=5.2.6,<6.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-allauth (>=65.11.2,<66.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
faker = "^37.6.0"

